--- a/confirm.html
+++ b/confirm.html
@@ -23,7 +23,7 @@
         <div class="row">
             <header id="navbar" class="shadow col bg-white fixed-top">
                 <nav class="navbar navbar-expand-md p-0">
-                    <a class="navbar-brand" href="#start" title="Go to the top of the site">                  
+                    <a class="navbar-brand" href="#start">                  
                         <img id="brandLogo" src="img/logo.gif" width="auto" height="90" class="d-inline-block align-top" alt="logo firmowe firmy Rywal">
                     </a>
                     <button class="btn btn-link navbar-toggler btn-lg mb-2" type="button" data-toggle="collapse" data-target="#navbarNav" aria-expanded="false" aria-controls="navbarNav">
@@ -32,10 +32,10 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <div class="navbar-nav">   
                             <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="index.html" alt="Podstawowe informacje o firmie Rywal">O nas</a>
-                            <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="news.html" alt="Nasze aktualności">Aktualności</a>
+                            <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link active" href="news.html" alt="Nasze aktualności">Aktualności</a>
                             <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="service.html" alt="Usługi oferowane przez firmę Rywal">Usługi</a>
                             <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="gallery.html" alt="Galeria zdjęć">Galeria</a>
-                            <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link active" href="career.html" alt="Informacje o zatrudnieniu w firmie Rywal">Kariera</a>
+                            <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="career.html" alt="Informacje o zatrudnieniu w firmie Rywal">Kariera</a>
                             <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="#gpsSymbolPic" alt="Dane kontaktowe do firmy Rywal">Kontakt</a>
                         </div>
                     </div>
@@ -47,63 +47,39 @@
         <!-- main content -->
         <div class="row my-5"></div>
 
-            <!-- picture -->
-        <div class="row">
-            <div class="col py-4 py-md-5">
-                <div class="row px-2 mx-1 mx-md-3 justify-content-center">
-                    <div class="col-12 p-0 shadow">
-                        <div class="careerPicCard">
-                            <h4 class="careerHeader text-light font-weight-bold m-0 px-2 py-1">Dołącz do Nas</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-            <!-- picture end -->
-
-            <!-- text -->
-        <div class="row">
-            <div class="shadow col py-5 bg-light">
-                <div class="row px-3 pb-5 justify-content-center">
-                    <div class="col-12 col-md-10">
-                        <h5>Obecnie poszukujemy kandydatów na kierowców kat. C,D.</h5>
-                        <p id="offer001" class="collapse text-dark text-justify">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa unde ratione maiores eum delectus corrupti vel quis itaque sit quo?</p>
-                        <button class="buttonText btn btn-link font-weight-bold text-dark text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#offer001" aria-expanded="false" aria-controls="offer001">Czytaj dalej . . .</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-            <!-- text end-->
-
-            <!-- form -->
+        <!-- confirmation form -->
         <div class="row">
             <div class="col-md-10 col-lg-8 col-xl-6 align-items-center mx-auto">
-                <form id="form" class="p-3 mx-0 my-3 shadow p-sm-5 m-sm-4 m-md-5" action="confirm.html" method="get">
-                    <label>Podaj swoje imię i nazwisko:</label>
-                    <div class="row">
-                        <div class="col-12 col-sm-6">
-                            <input id="input1" type="text" class="form-control" placeholder="Imię" required>
-                        </div>
-                        <div class="col-12 col-sm-6 mt-2 mt-sm-0">
-                            <input id="input2" type="text" class="form-control" placeholder="Nazwisko" required>
-                        </div>
-                    </div>    
+                <form id="confirmForm" class="p-3 mx-0 my-3 shadow p-sm-5 m-sm-4 m-md-5">
+                    <h3 class="text-muted">Zweryfikuj swoje dane</h3>
                     <div class="form-group pt-3">
-                        <label for="email">Podaj swój adres email:</label>
-                        <input id="email" type="email" class="form-control" aria-describedby="emailHelp" placeholder="email" required>
-                        <small id="emailHelp" class="form-text text-muted">Nie udostępniamy nikomu Twojego adresu.</small>
+                        <label for="input1Confirmed">Twoje imię:</label>
+                        <input id="input1Confirmed" type="text" class="form-control btn btn-outline-none text-left" required disabled>
+                    </div>   
+                    <div class="form-group pt-3">
+                        <label for="input2Confirmed">Twoje nazwisko:</label>
+                        <input id="input2Confirmed" type="text" class="form-control btn btn-outline-none text-left" required disabled>
+                    </div>  
+                    <div class="form-group pt-3">
+                        <label for="emailConfirmed">Twój adres email:</label>
+                        <input id="emailConfirmed" type="email" class="form-control btn btn-outline-none text-left" aria-describedby="emailHelp" required disabled>
                     </div>
                     <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="Check" required>
+                        <input type="checkbox" class="form-check-input" id="Check" required disabled checked>
                         <label class="form-check-label" for="Check">Akcepuję <a href="#">plitykę prywatności</a> oraz wyrażam zgodę na przetwarzanie moich danych na potrzeby rekrutacji.</label>
                     </div>
+                    <button id="backButton" class="btn btn-outline-primary m-2 mb-5">Popraw</button>
+                    <div class="form-group">
+                        <label for="FormControlFile">Dołącz swoje CV (format PDF):</label>
+                        <input type="file" name="file" class="form-control-file" id="file" accept=".pdf" required>
+                    </div>
                     <input id="submit" type="submit" name="submit" class="btn btn-outline-primary m-3 counter" value="">
-                    <hr>
-                    <p id="addText" class="text-center" style="text-indent: 0;">Możesz też skontaktować się z naszym biurem bezpośrednio, poprzez dane kontaktowe ze stopki.</p>
                 </form>
+                
             </div>
         </div>
-            <!-- form end-->
+
+        <!-- confirmation form end-->
 
         <!-- main content end-->
 
@@ -114,9 +90,9 @@
                     <h5 class="mb-0">Adres:</h5>
                     <p class="mb-0">ul. Grunwaldzka 20</p>
                     <p>80-000 Człuchów</p>
-                    <h5 class="font-weight-bold mb-3"><a href="tel:+485555555" class="text-dark" title="Call to: +48 555-55-55">Tel: +48 555-55-55</a></h5>
+                    <h5 class="font-weight-bold mb-3"><a href="tel:+485555555" class="text-dark">Tel: +48 555-55-55</a></h5>
                     <h5 class="my-0">E-mail:</h5>
-                    <p class="font-weight-bold my-0"><a href="mailto:biuro@rywal.pl" class="text-dark" title="Send email to: biuro@rywal.pl">biuro@rywal.pl</a></p>
+                    <p class="font-weight-bold my-0"><a href="mailto:biuro@rywal.pl" class="text-dark">biuro@rywal.pl</a></p>
                 </div>
             </div>
         </div>
@@ -125,7 +101,7 @@
         <!-- footer -->
         <div class="row">
             <footer class="shadow-lg col py-2 bg-light text-dark text-right">
-                <p>Copyright &copy; 2019 <a class="text-dark" href="https://tribusk2.pl/" target="_blank" title="Visit: www.tribusk2.pl">TribusK2</a></p> 
+                <p>Copyright &copy; 2019 <a class="text-dark" href="https://tribusk2.pl/">TribusK2</a></p> 
             </footer>
         </div>
         <!-- footer end-->
