--- a/career.html
+++ b/career.html
@@ -82,19 +82,19 @@
                     <label>Podaj swoje imię i nazwisko:</label>
                     <div class="row">
                         <div class="col-12 col-sm-6">
-                            <input id="input1" type="text" class="form-control" placeholder="Imię" required>
+                            <input id="input1" type="text" name="firstName" class="form-control" placeholder="Imię" maxlength="50" required>
                         </div>
                         <div class="col-12 col-sm-6 mt-2 mt-sm-0">
-                            <input id="input2" type="text" class="form-control" placeholder="Nazwisko" required>
+                            <input id="input2" type="text" name="lastName" class="form-control" placeholder="Nazwisko" maxlength="50" required>
                         </div>
-                    </div>    
+                    </div>
                     <div class="form-group pt-3">
                         <label for="email">Podaj swój adres email:</label>
-                        <input id="email" type="email" class="form-control" aria-describedby="emailHelp" placeholder="email" required>
+                        <input id="email" type="email" name="email" class="form-control" aria-describedby="emailHelp" placeholder="email" maxlength="50" required>
                         <small id="emailHelp" class="form-text text-muted">Nie udostępniamy nikomu Twojego adresu.</small>
                     </div>
                     <div class="form-check">
-                        <input id="checkForm" type="checkbox" class="form-check-input" required>
+                        <input id="checkForm" name="checkForm" type="checkbox" class="form-check-input" required>
                         <label class="form-check-label" for="Check">Akcepuję <a href="#">plitykę prywatności</a> oraz wyrażam zgodę na przetwarzanie moich danych na potrzeby rekrutacji.</label>
                     </div>
                     <div class="row justify-content-center">
