--- a/cvs.html
+++ b/cvs.html
@@ -47,28 +47,18 @@
         <!-- main content -->
         <div class="row my-5"></div>
 
-        <!-- confirmation form -->
+        <!-- message -->
         <div class="row align-items-center fixedHight">
             <div class="col-md-10 col-lg-8 col-xl-6 align-items-center mx-auto">
-                <form id="confirmForm" class="p-3 mx-0 my-3 shadow p-sm-5 m-sm-4 m-md-5" action="confirmed.html" method="get">
-                    <div class="row form-group pt-3 justify-content-center align-items-center">
-                        <label for="codeCheck" class="m-2">Kod weryfikacyjny:</label>
-                        <input id="codeCheck" name="codeCheck" type="text" class="form-control col-3" maxlength="50" required>
-                        <small class="col-7 m-0 p-0 form-text text-danger text-center validationAlert">Podano nieprawidłowy kod</small>
-                        <small id="codelHelp" class="form-text text-dark text-center">Kod weryfikacyjny został wysłany na podanego przez Ciebie maila. Wpisz go powyżej i wciśnij "Aplikuj".</small>
-                    </div>
-                    <div class="row justify-content-center">
-                        <button id="submit" type="button" name="confirm" class="btn btn-outline-primary m-3 counter">
-                            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                            <span class="sr-only">Loading...</span>
-                        </button>
-                    </div>
+                <form class="p-3 mx-0 my-3 shadow p-sm-5 m-sm-4 m-md-5 align-items-center">
+                    <h3 class="text-muted text-center">Dziękujemy!</h3>
+                    <h4 class="mt-3 text-muted text-center">Twoja aplikacja została wysłana.</h4>
+                    <p class="col-12 mt-4 text-center">Jeżeli uznamy, że jesteś osobą, która może pasować do naszego zespołu, skontaktujemy się z Tobą.</p>
                 </form>
-                
             </div>
         </div>
 
-        <!-- confirmation form end-->
+        <!-- message end-->
 
         <!-- main content end-->
 
